--- a/styles.css
+++ b/styles.css
@@ -835,16 +835,15 @@ button {
    content: ' - ';
 }
 
-.questions__title-container {
-}
-
 .questions__title {
    height: 50px;
    line-height: 50px;
+   padding-right: 20px;
    margin: 0;
    cursor: pointer;
    font-weight: 400;
 }
+
 .questions__text {
    max-width: 75%;
    line-height: 140%;
